# NoctScriptIDE

./: .gitmodules  CMakeLists.txt  README.md
docs/: build.md  noctscript.1
resources/: icon.icns  io.noctvm.noctscript.desktop  io.noctvm.noctscript.yml  resources.qrc
resources/ios/: Info.plist
resources/macos/: Info.plist
scripts/: Dockerfile  build-flatpak.sh  build-ios.sh  build-mac.sh  build-win.bat  build-win.sh  docker-build.sh  release.sh  updatebin.sh
src/: bootwindow.cpp  bootwindow.h  cocoa.mm  mainwindow.cpp  mainwindow.h  texteditor.cpp  texteditor.h  win32.cpp
